@@ -1,5 +1,8 @@
 2007-11-15  Don Porter	<dgp@users.sourceforge.net>
 
+	* generic/regc_nfa.c:	Fixed infinite loop in the regexp compiler.
+	[Bug 1810038].
+
 	* generic/regc_nfa.c:	Corrected looping logic in fixempties() to
 	avoid wasting time walking a list of dead states. [Bug 1832612]
 
